// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/admin_console/user_grid/UserGrid should match snapshot with 2 users 1`] = `
<div>
  <div
    class="DataGrid"
  >
    <div
      class="DataGrid_search"
    >
      <div
        class="DataGrid_searchBar"
      >
        <span
          aria-hidden="true"
          class="DataGrid_searchIcon"
        >
          <i
            class="fa fa-search"
            title="Search Icon"
          />
        </span>
        <input
          data-testid="searchInput"
          placeholder="Search"
          type="text"
          value=""
        />
        <i
          class="DataGrid_clearButton fa fa-times-circle hidden"
          data-testid="clear-search"
        />
      </div>
      <div
        class="Filter"
      >
        <button
          class="Filter_button"
          type="button"
        >
          <i
            class="Icon icon-filter-variant"
          />
          Filters
        </button>
        <div
          class="Filter_content"
        >
          <div
            class="Filter_header"
          >
            <div
              class="Filter_title"
            >
              Filter by
            </div>
            <a
              class="Filter_reset"
            >
              Reset filters
            </a>
          </div>
          <hr />
          <div
            class="Filter_lists"
          />
          <button
            class="btn btn-primary btn-sm Filter_apply"
            disabled=""
            type="button"
          >
            Apply
          </button>
        </div>
      </div>
    </div>
    <div
      class="DataGrid_header"
    >
      <div
        class="DataGrid_cell"
        style="flex-grow: 3;"
      >
        Name
      </div>
      <div
        class="DataGrid_cell"
      />
      <div
        class="DataGrid_cell"
      />
    </div>
    <div
      class="DataGrid_rows"
      style="min-height: 160px;"
    >
      <div
        class="DataGrid_row"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        >
          <div
            class="UserGrid_nameRow"
          >
            <span
              class="status-wrapper style--none"
            >
              <span
                class="profile-icon "
              >
                <img
                  alt="user profile image"
                  class="Avatar Avatar-md"
                  loading="lazy"
                  src="/api/v4/users/userid1/image"
                />
              </span>
            </span>
            <div
              class="UserGrid_name"
            >
              <span>
                user-1 -  
              </span>
              <span
                class="ug-email"
              />
            </div>
          </div>
        </div>
        <div
          class="DataGrid_cell"
        />
        <div
          class="DataGrid_cell"
          style="text-align: right;"
        >
          <div
            class="UserGrid_removeRow"
          >
            <a
              class=""
              href="#"
              role="button"
            >
              Remove
            </a>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_row"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        >
          <div
            class="UserGrid_nameRow"
          >
            <span
              class="status-wrapper style--none"
            >
              <span
                class="profile-icon "
              >
                <img
                  alt="user profile image"
                  class="Avatar Avatar-md"
                  loading="lazy"
                  src="/api/v4/users/userid2/image"
                />
              </span>
            </span>
            <div
              class="UserGrid_name"
            >
              <span>
                user-2 -  
              </span>
              <span
                class="ug-email"
              />
            </div>
          </div>
        </div>
        <div
          class="DataGrid_cell"
        />
        <div
          class="DataGrid_cell"
          style="text-align: right;"
        >
          <div
            class="UserGrid_removeRow"
          >
            <a
              class=""
              href="#"
              role="button"
            >
              Remove
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="DataGrid_footer"
    >
      <div
        class="DataGrid_cell"
      >
        1 - 2 of 2
        <button
          aria-label="Previous page"
          class="btn btn-quaternary btn-icon btn-sm ml-2 prev disabled"
          disabled=""
          type="button"
        >
          <i
            class="icon icon-chevron-left"
            title="Previous Icon"
          />
        </button>
        <button
          aria-label="Next page"
          class="btn btn-quaternary btn-icon btn-sm next disabled"
          disabled=""
          type="button"
        >
          <i
            class="icon icon-chevron-right"
            title="Next Icon"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/user_grid/UserGrid should match snapshot with 2 users and 1 added included 1`] = `
<div>
  <div
    class="DataGrid"
  >
    <div
      class="DataGrid_search"
    >
      <div
        class="DataGrid_searchBar"
      >
        <span
          aria-hidden="true"
          class="DataGrid_searchIcon"
        >
          <i
            class="fa fa-search"
            title="Search Icon"
          />
        </span>
        <input
          data-testid="searchInput"
          placeholder="Search"
          type="text"
          value=""
        />
        <i
          class="DataGrid_clearButton fa fa-times-circle hidden"
          data-testid="clear-search"
        />
      </div>
      <div
        class="Filter"
      >
        <button
          class="Filter_button"
          type="button"
        >
          <i
            class="Icon icon-filter-variant"
          />
          Filters
        </button>
        <div
          class="Filter_content"
        >
          <div
            class="Filter_header"
          >
            <div
              class="Filter_title"
            >
              Filter by
            </div>
            <a
              class="Filter_reset"
            >
              Reset filters
            </a>
          </div>
          <hr />
          <div
            class="Filter_lists"
          />
          <button
            class="btn btn-primary btn-sm Filter_apply"
            disabled=""
            type="button"
          >
            Apply
          </button>
        </div>
      </div>
    </div>
    <div
      class="DataGrid_header"
    >
      <div
        class="DataGrid_cell"
        style="flex-grow: 3;"
      >
        Name
      </div>
      <div
        class="DataGrid_cell"
      />
      <div
        class="DataGrid_cell"
      />
    </div>
    <div
      class="DataGrid_rows"
      style="min-height: 240px;"
    >
      <div
        class="DataGrid_row"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        >
          <div
            class="UserGrid_nameRow"
          >
            <span
              class="status-wrapper style--none"
            >
              <span
                class="profile-icon "
              >
                <img
                  alt="user profile image"
                  class="Avatar Avatar-md"
                  loading="lazy"
                  src="/api/v4/users/userid-not-saved/image"
                />
              </span>
            </span>
            <div
              class="UserGrid_name"
            >
              <span>
                user-not-saved -  
              </span>
              <span
                class="ug-email"
              />
            </div>
          </div>
        </div>
        <div
          class="DataGrid_cell"
        >
          <div
            class="TagWrapper-kezsCu gCuUKH Tag Tag--xs NewUserBadge"
          >
            <span
              class="TagText-bWoQAI beIloY"
            >
              New
            </span>
          </div>
        </div>
        <div
          class="DataGrid_cell"
          style="text-align: right;"
        >
          <div
            class="UserGrid_removeRow"
          >
            <a
              class=""
              href="#"
              role="button"
            >
              Remove
            </a>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_row"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        >
          <div
            class="UserGrid_nameRow"
          >
            <span
              class="status-wrapper style--none"
            >
              <span
                class="profile-icon "
              >
                <img
                  alt="user profile image"
                  class="Avatar Avatar-md"
                  loading="lazy"
                  src="/api/v4/users/userid1/image"
                />
              </span>
            </span>
            <div
              class="UserGrid_name"
            >
              <span>
                user-1 -  
              </span>
              <span
                class="ug-email"
              />
            </div>
          </div>
        </div>
        <div
          class="DataGrid_cell"
        />
        <div
          class="DataGrid_cell"
          style="text-align: right;"
        >
          <div
            class="UserGrid_removeRow"
          >
            <a
              class=""
              href="#"
              role="button"
            >
              Remove
            </a>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_row"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        >
          <div
            class="UserGrid_nameRow"
          >
            <span
              class="status-wrapper style--none"
            >
              <span
                class="profile-icon "
              >
                <img
                  alt="user profile image"
                  class="Avatar Avatar-md"
                  loading="lazy"
                  src="/api/v4/users/userid2/image"
                />
              </span>
            </span>
            <div
              class="UserGrid_name"
            >
              <span>
                user-2 -  
              </span>
              <span
                class="ug-email"
              />
            </div>
          </div>
        </div>
        <div
          class="DataGrid_cell"
        />
        <div
          class="DataGrid_cell"
          style="text-align: right;"
        >
          <div
            class="UserGrid_removeRow"
          >
            <a
              class=""
              href="#"
              role="button"
            >
              Remove
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="DataGrid_footer"
    >
      <div
        class="DataGrid_cell"
      >
        1 - 3 of 3
        <button
          aria-label="Previous page"
          class="btn btn-quaternary btn-icon btn-sm ml-2 prev disabled"
          disabled=""
          type="button"
        >
          <i
            class="icon icon-chevron-left"
            title="Previous Icon"
          />
        </button>
        <button
          aria-label="Next page"
          class="btn btn-quaternary btn-icon btn-sm next disabled"
          disabled=""
          type="button"
        >
          <i
            class="icon icon-chevron-right"
            title="Next Icon"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/user_grid/UserGrid should match snapshot with 2 users and 1 removed user 1`] = `
<div>
  <div
    class="DataGrid"
  >
    <div
      class="DataGrid_search"
    >
      <div
        class="DataGrid_searchBar"
      >
        <span
          aria-hidden="true"
          class="DataGrid_searchIcon"
        >
          <i
            class="fa fa-search"
            title="Search Icon"
          />
        </span>
        <input
          data-testid="searchInput"
          placeholder="Search"
          type="text"
          value=""
        />
        <i
          class="DataGrid_clearButton fa fa-times-circle hidden"
          data-testid="clear-search"
        />
      </div>
      <div
        class="Filter"
      >
        <button
          class="Filter_button"
          type="button"
        >
          <i
            class="Icon icon-filter-variant"
          />
          Filters
        </button>
        <div
          class="Filter_content"
        >
          <div
            class="Filter_header"
          >
            <div
              class="Filter_title"
            >
              Filter by
            </div>
            <a
              class="Filter_reset"
            >
              Reset filters
            </a>
          </div>
          <hr />
          <div
            class="Filter_lists"
          />
          <button
            class="btn btn-primary btn-sm Filter_apply"
            disabled=""
            type="button"
          >
            Apply
          </button>
        </div>
      </div>
    </div>
    <div
      class="DataGrid_header"
    >
      <div
        class="DataGrid_cell"
        style="flex-grow: 3;"
      >
        Name
      </div>
      <div
        class="DataGrid_cell"
      />
      <div
        class="DataGrid_cell"
      />
    </div>
    <div
      class="DataGrid_rows"
      style="min-height: 80px;"
    >
      <div
        class="DataGrid_row"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        >
          <div
            class="UserGrid_nameRow"
          >
            <span
              class="status-wrapper style--none"
            >
              <span
                class="profile-icon "
              >
                <img
                  alt="user profile image"
                  class="Avatar Avatar-md"
                  loading="lazy"
                  src="/api/v4/users/userid2/image"
                />
              </span>
            </span>
            <div
              class="UserGrid_name"
            >
              <span>
                user-2 -  
              </span>
              <span
                class="ug-email"
              />
            </div>
          </div>
        </div>
        <div
          class="DataGrid_cell"
        />
        <div
          class="DataGrid_cell"
          style="text-align: right;"
        >
          <div
            class="UserGrid_removeRow"
          >
            <a
              class=""
              href="#"
              role="button"
            >
              Remove
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="DataGrid_footer"
    >
      <div
        class="DataGrid_cell"
      >
        1 - 1 of 1
        <button
          aria-label="Previous page"
          class="btn btn-quaternary btn-icon btn-sm ml-2 prev disabled"
          disabled=""
          type="button"
        >
          <i
            class="icon icon-chevron-left"
            title="Previous Icon"
          />
        </button>
        <button
          aria-label="Next page"
          class="btn btn-quaternary btn-icon btn-sm next disabled"
          disabled=""
          type="button"
        >
          <i
            class="icon icon-chevron-right"
            title="Next Icon"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
